Added new example night_rider.rsRemoved example simple.rsExtracted Color struct and added from_hex method to convert from web hex colors- moved Blinkstick into root module- added some utils to convert from hex to decimal

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
         "label": "cargo run example",
         "type": "shell",
         "command": "cargo",
-        "args": ["run", "--example", "simple"],
+        "args": ["run", "--example", "night_rider"],
         "group": {
           "kind": "build",
           "isDefault": true
