--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,21 @@ language: rust
 rust:
   - stable
   - beta
-  - nightly
 matrix:
-  allow_failures:
-    - rust: nightly
+  include:
+    - env: TARGET=x86_64-unknown-linux-gnu FEATURE_FLAGS="linux-static-libusb"
+
+    - env: TARGET=x86_64-unknown-linux-gnu FEATURE_FLAGS="linux-static-hidraw"
+
+    - env: TARGET=x86_64-unknown-linux-gnu FEATURE_FLAGS="linux-shared-libusb"
+
+    - env: TARGET=x86_64-unknown-linux-gnu FEATURE_FLAGS="linux-shared-hidraw"
+
+    - env: TARGET=x86_64-apple-darwin
+      os: osx
+addons:
+  apt:
+    packages:
+      - libusb-1.0-0-dev
+      - libudev-dev
+      - libhidapi-dev
