--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Nicolai Mainiero <nicolai@mainiero.de>"]
 edition = "2018"
 license = "MIT"
+description = "Rust API Implementations for BlinkSticks smart LED controllers with integrated USB firmware. (https://www.blinkstick.com/)"
+repository = "https://github.com/nicolaimainiero/blink-stick"
+homepage = "https://github.com/nicolaimainiero/blink-stick"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
